--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,16 @@ Temporary Items
 /week6-106.BinarySearch/nbproject/private/
 /week6-104.Sorting/nbproject/private/
 /week5-093.PersonExtended/build/
+/week6-094.PhoneBook/build/
+/week6-095.Money/build/
+/week6-096.SumOfArray/build/
+/week6-097.ElegantPrinting/build/
+/week6-098.CopyAndReverse/build/
+/week6-099.ArrayToStars/build/
+/week6-100.NightSky/build/
+/week6-101.Library/build/
+/week6-102.GradeDistribution/build/
+/week6-103.Birdwatcher/build/
+/week6-104.Sorting/build/
+/week6-105.GuessingGame/build/
+/week6-106.BinarySearch/build/
